--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="geral.css" />
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <title>OmniFood</title>
+
 </head>
 
 <body>
@@ -60,6 +63,21 @@
         </div>
       </div>
     </section>
+
+    <section class="section-featured">
+      <div class="container">
+        <h2 class="heading-featured-in">As featured in</h2>
+        <div class="logos">
+          <img src="img/logos/techcrunch.png" alt="techcrunch logo" />
+          <img src="img/logos/business-insider.png" alt="business-insider logo" />
+          <img src="img/logos/forbes.png" alt="forbes logo" />
+          <img src="img/logos/the-new-york-times.png" alt="the new york times logo" />
+          <img src="img/logos/usa-today.png" alt="usa today logo" />
+        </div>
+      </div>
+
+    </section>
+
     <section class="section-how">
       <div class="container">
         <span class="subheading">How it works</span>
@@ -91,7 +109,7 @@
         <div class="step-text-box">
           <p class="step-number">02</p>
           <h3 class="heading-tertiary">Approve your weekly meal plan</h3>
-          <p class="step-description"> 
+          <p class="step-description">
             Once per
             week, approve the meal plan generated for you by Omnifood AI.
             You can change ingredients, swap entire meals, or even add your own recipes.
@@ -112,7 +130,88 @@
         <div class="step-img-box">
           <img src="img/app/app-screen-3.png" class="step-img" alt="iPhone app delivery screen" />
         </div>
+      </div>
+    </section>
 
+    <section class="section-meals">
+      <div class="container center-text">
+        <span class="subheading">Meals</span>
+        <h2 class="heading-secondary">
+          Omnifood AI chooses from 5,000+ recipes
+        </h2>
+      </div>
+
+      <div class="container grid grid--3-cols margin-bottom-md">
+        <div class="meal">
+          <img src="img/meals/meal-1.jpg" class="meal-img" alt="Japanese Gyozas" />
+          <div class="meal-content">
+            <div class="meal-tags">
+              <span class="tag tag-vegetarian">Vegetarian</span>
+            </div>
+
+            <p class="meal-title">Japanese Gyozas</p>
+            <ul class="meal-attributes">
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                <span><strong>650</strong> calories</span>
+              </li>
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                <span>NutriScore &reg; <strong>74</strong></span>
+              </li>
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                <span><strong>4.9</strong> rating (729)</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="meal">
+          <img src="img/meals/meal-2.jpg" class="meal-img" alt="Avocado Salad" />
+          <div class="meal-content">
+            <div class="meal-tags">
+              <span class="tag tag--vegan">Vegan</span>
+              <span class="tag tag--paleo">Paleo</span>
+            </div>
+
+            <p class="meal-title">Avocado Salad</p>
+            <ul class="meal-attributes">
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="flame-outline"></ion-icon>
+                <span><strong>400</strong> calories</span>
+              </li>
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="restaurant-outline"></ion-icon>
+                <span>NutriScore &reg; <strong>92</strong></span>
+              </li>
+              <li class="meal-attribute"><ion-icon class="meal-icon" name="star-outline"></ion-icon>
+                <span><strong>4.8</strong> rating (441)</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="diets">
+          <h3 class="heading-tertiary">Works with any diet :</h3>
+          <ul class="list">
+            <li class="list-item"><ion-icon class="list-icon"
+                name="checkmark-outline"></ion-icon><span>Vegetarian</span></li>
+            <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Vegan</span>
+            </li>
+            <li class="list-item"><ion-icon class="list-icon"
+                name="checkmark-outline"></ion-icon><span>Pescatarian</span></li>
+            <li class="list-item"><ion-icon class="list-icon"
+                name="checkmark-outline"></ion-icon><span>Gluten-Free</span></li>
+            <li class="list-item"><ion-icon class="list-icon"
+                name="checkmark-outline"></ion-icon><span>Lactose-Free</span></li>
+            <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Keto</span></li>
+            <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Paleo</span>
+            </li>
+            <li class="list-item"><ion-icon class="list-icon" name="checkmark-outline"></ion-icon><span>Low
+                FODMAP</span></li>
+            <li class="list-item"><ion-icon class="list-icon"
+                name="checkmark-outline"></ion-icon><span>Kid-Friendly</span></li>
+          </ul>
+        </div>
+      </div>
+      <div class="container all-recipes">
+        <a href="#" class="link">See all recipes &rarr;</a>
       </div>
     </section>
   </main>
