--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
-    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Rubik:wght@400;600;700&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Rubik:wght@400;600;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="geral.css" />
@@ -20,14 +20,16 @@
 
 <body>
   <header class="header">
-    <img class="logo" alt="Omnifood Logo" src="img/omnifood-logo.png" />
+    <a href="#">
+      <img class="logo" alt="Omnifood Logo" src="img/omnifood-logo.png" />
+    </a>
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <li><a href="#" class="main-nav-link">Section 1</a></li>
-        <li><a href="#" class="main-nav-link">Section 2</a></li>
-        <li><a href="#" class="main-nav-link">Section 3</a></li>
-        <li><a href="#" class="main-nav-link">Section 4</a></li>
-        <li><a href="#" class="main-nav-link nav-cta">Section 5</a></li>
+        <li><a href="#" class="main-nav-link">How it works</a></li>
+        <li><a href="#" class="main-nav-link">Meals</a></li>
+        <li><a href="#" class="main-nav-link">Testimonials</a></li>
+        <li><a href="#" class="main-nav-link">Pricing</a></li>
+        <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
       </ul>
     </nav>
   </header>
@@ -419,7 +421,115 @@
         </div>
       </div>
     </section>
+
+    <section class="section-cta">
+      <div class="container">
+        <div class="cta">
+          <div class="cta-text-box">
+            <h2 class="heading-secondary">Get your first
+              meal for free!
+            </h2>
+            <p class="cta-text">
+              Healthy, tasty and hassle-free meals are
+              waiting for you. Start eating well today.
+              You can cancel or pause anytime. And the
+              first meal is on us!
+            </p>
+            <form class="cta-form" action="#">
+              <div>
+                <label>Name :</label>
+                <input type="text" placeholder="First Name" required />
+              </div>
+              <div>
+                <label>Email :</label>
+                <input type="email" placeholder="exe@exemple.com" required />
+              </div>
+              <div>
+                <label>Where did you hear from us?</label>
+                <select required>
+                  <option value="">Please choose one option</option>
+                  <option value="friends">Friends and family</option>
+                  <option value="youtube">Youtube video</option>
+                  <option value="podcast">Podcast</option>
+                  <option value="ad">Social midia AD's</option>
+                  <option value="others">Others</option>
+                </select>
+              </div>
+              <button class="btn btn--form"> Sign up now</button>
+            </form>
+
+          </div>
+          <div class="cta-img-box" role="img" aria-label="Woman enjoying food">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+
+  <footer class="footer">
+    <div class="container grid grid--footer">
+      <div class="logo-col">
+        <a href="#" class="footer-logo">
+          <img class="logo" alt="Omnifood Logo" src="img/omnifood-logo.png" />
+        </a>
+
+        <ul class="social-links">
+          <li>
+            <a class="footer-link" href="#"><ion-icon class="social-icon" name="logo-instagram"></ion-icon></a>
+          </li>
+          <li>
+            <a class="footer-link" href="#"><ion-icon class="social-icon" name="logo-facebook"></ion-icon></a>
+          </li>
+          <li>
+            <a class="footer-link" href="#"><ion-icon class="social-icon" name="logo-twitter"></ion-icon></a>
+          </li>
+        </ul>
+
+        <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc.
+          All rights reserved.
+        </p>
+      </div>
+      <div class="address-col">
+        <p class="footer-heading">Contact us</p>
+        <address class="contacts">
+          <p class="address">623 Harrison St.,2nd Floor, San Francisco, CA 94107</p>
+          <p>
+            <a class="footer-link" href="tel:415-201-6370">415-201-6370</a><br />
+            <a class="footer-link" href="mailto:hello@omnifood.com">hello@omnifood.com</a>
+          </p>
+        </address>
+      </div>
+      <nav class="nav-col">
+        <p class="footer-heading">Account</p>
+        <ul class="footer-nav">
+          <li><a class="footer-link" href="#">Create Account</a></li>
+          <li><a class="footer-link" href="#">Sign in</a></li>
+          <li><a class="footer-link" href="#">iOS app</a></li>
+          <li><a class="footer-link" href="#">Android App</a></li>
+        </ul>
+      </nav>
+
+      <nav class="nav-col">
+        <p class="footer-heading">Company</p>
+        <ul class="footer-nav">
+          <li><a class="footer-link" href="#">About Omnifood</a></li>
+          <li><a class="footer-link" href="#">For Business</a></li>
+          <li><a class="footer-link" href="#">Cooking partners</a></li>
+          <li><a class="footer-link" href="#">Careers</a></li>
+        </ul>
+      </nav>
+
+      <nav class="nav-col">
+        <p class="footer-heading">Resources</p>
+        <ul class="footer-nav">
+          <li><a class="footer-link" href="#">Recipe directory</a></li>
+          <li><a class="footer-link" href="#">Help center</a></li>
+          <li><a class="footer-link" href="#">Privacy & Terms</a></li>
+        </ul>
+      </nav>
+    </div>
+
+  </footer>
 </body>
 
 </html>
