--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="geral.css" />
+  <link rel="stylesheet" href="querie.css" />
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   <title>OmniFood</title>
@@ -32,6 +33,14 @@
         <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
       </ul>
     </nav>
+
+    <button class="btn-mobile-nav">
+      <ion-icon class="icon-mobile-nav" name="menu-outline">
+      </ion-icon>
+      <ion-icon class="icon-mobile-nav" name="close-outline">
+      </ion-icon>
+    </button>
+
   </header>
 
   <main>
