--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Omnifood is an AI-powered food subscription that will
+  make you eat healthy again,365 days per year.It's tailored to your personal tastes and nutritional needs. " />
+  <link rel="icon" href="img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Rubik:wght@400;600;700&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="geral.css" />
-  <link rel="stylesheet" href="querie.css" />
+  <link rel="stylesheet" href="CSS/style.css" />
+  <link rel="stylesheet" href="CSS/geral.css" />
+  <link rel="stylesheet" href="CSS/querie.css" />
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-  <title>OmniFood</title>
+  <script src="app.js" defer></script>
+  <title>OmniFood &mdash; Never cook again!</title>
 
 </head>
 
@@ -26,11 +30,11 @@
     </a>
     <nav class="main-nav">
       <ul class="main-nav-list">
-        <li><a href="#" class="main-nav-link">How it works</a></li>
-        <li><a href="#" class="main-nav-link">Meals</a></li>
-        <li><a href="#" class="main-nav-link">Testimonials</a></li>
-        <li><a href="#" class="main-nav-link">Pricing</a></li>
-        <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
+        <li><a href="#how" class="main-nav-link">How it works</a></li>
+        <li><a href="#meals" class="main-nav-link">Meals</a></li>
+        <li><a href="#testimonials" class="main-nav-link">Testimonials</a></li>
+        <li><a href="#pricing" class="main-nav-link">Pricing</a></li>
+        <li><a href="#cta" class="main-nav-link nav-cta">Try for free</a></li>
       </ul>
     </nav>
 
@@ -54,8 +58,8 @@
             The smart 365-days-per-year food subscription that will make you eat healthy again.
             Tailored to your personal tastes and nutritional needs.
           </p>
-          <a href="#" class="btn btn--full margin-right-sm">Start eating well</a>
-          <a href="#" class="btn btn--outline">Learn more &darr;</a>
+          <a href="#cta" class="btn btn--full margin-right-sm">Start eating well</a>
+          <a href="#how" class="btn btn--outline">Learn more &darr;</a>
           <div class="delivered-meals">
             <div class="delivered-imgs">
               <img src="img/customers/customer-1.jpg" alt="Custumer photo" />
@@ -69,8 +73,14 @@
           </div>
         </div>
         <div class="hero-img-box">
-          <img src="img/hero.png" class="hero-img"
+          <picture>
+            <source srcset="img/hero.webp"
+            type="image/webp" />
+            <source srcset="img/hero-min.png"
+            type="image/png" />
+            <img src="img/hero.webp" class="hero-img"
             alt="Woman enoying food, meals in storage container, and food bowls on a table" />
+          </picture>
         </div>
       </div>
     </section>
@@ -89,7 +99,7 @@
 
     </section>
 
-    <section class="section-how">
+    <section class="section-how" id="how">
       <div class="container">
         <span class="subheading">How it works</span>
         <h2 class="heading-secondary">Your daily dose of healthy in 3 simple steps</h2>
@@ -144,7 +154,7 @@
       </div>
     </section>
 
-    <section class="section-meals">
+    <section class="section-meals" id="meals">
       <div class="container center-text">
         <span class="subheading">Meals</span>
         <h2 class="heading-secondary">
@@ -226,7 +236,7 @@
       </div>
     </section>
 
-    <section class="section-testimonials grid grid--2-cols">
+    <section class="section-testimonials grid grid--2-cols" id="testimonials">
       <div class="testimonials-container">
         <span class="subheading">testimonials</span>
         <h2 class="heading-secondary">Once you try it, you cant't go back
@@ -323,7 +333,7 @@
       </div>
     </section>
 
-    <section class="section-pricing">
+    <section class="section-pricing" id="pricing">
       <div class="container ">
         <span class="subheading">Pricing</span>
         <h2 class="heading-secondary">
@@ -431,7 +441,7 @@
       </div>
     </section>
 
-    <section class="section-cta">
+    <section class="section-cta" id="cta">
       <div class="container">
         <div class="cta">
           <div class="cta-text-box">
@@ -494,7 +504,7 @@
           </li>
         </ul>
 
-        <p class="copyright">Copyright &copy; 2027 by Omnifood, Inc.
+        <p class="copyright">Copyright &copy; <span class="year">2027</span> by Omnifood, Inc.
           All rights reserved.
         </p>
       </div>
