--- a/index.html
+++ b/index.html
@@ -454,18 +454,18 @@
               You can cancel or pause anytime. And the
               first meal is on us!
             </p>
-            <form class="cta-form" action="#">
+            <form class="cta-form" name="sign-up" netlifly>
               <div>
                 <label>Name :</label>
-                <input type="text" placeholder="First Name" required />
+                <input type="text" placeholder="First Name" name="first-name" required />
               </div>
               <div>
                 <label>Email :</label>
-                <input type="email" placeholder="exe@exemple.com" required />
+                <input type="email" placeholder="exe@exemple.com" name="email" required />
               </div>
               <div>
                 <label>Where did you hear from us?</label>
-                <select required>
+                <select  name="select-where" required>
                   <option value="">Please choose one option</option>
                   <option value="friends">Friends and family</option>
                   <option value="youtube">Youtube video</option>
