--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
               You can cancel or pause anytime. And the
               first meal is on us!
             </p>
-            <form class="cta-form" name="sign-up" netlifly>
+            <form class="cta-form" name="sign-up" netlify>
               <div>
                 <label>Name :</label>
                 <input type="text" placeholder="First Name" name="first-name" required />
