--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
       <div class="container ">
         <span class="subheading">Pricing</span>
         <h2 class="heading-secondary">
-          Eating wll without breaking the bank
+          Eating well without breaking the bank
         </h2>
       </div>
       <div class="container grid grid--2-cols margin-bottom-md">
